tech background img

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="col-lg-6 advantage-grid-info pt-md-5">
               <div class="advantage_left">
                 <h4 class="mb-2">Consultoría IT</h4>
-                <h3>Amplia variedad de Servicios</h3>
+                <h3>Amplia variedad de servicios</h3>
                 <p class="mt-2">
                   Hoy en día en muchas empresas solo buscan el comercializar
                   productos y sub-contratan a un tercero para dar el servicio.
@@ -226,7 +226,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="col-lg-6 advantage-grid-info pt-md-5">
               <div class="advantage_left">
                 <h4 class="mb-2">Capacitado y Certificado</h4>
-                <h3>El Equipo <u>más</u> Experimentado</h3>
+                <h3>El equipo <u>más</u> experimentado</h3>
                 <p class="mt-2">
                   Al contar con técnicos capacitados y certificados entendemos
                   la importancia de tu proyecto y le asignamos el valor debido,
@@ -240,7 +240,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="col-lg-6 advantage-grid-info pt-md-5">
               <div class="advantage_left">
                 <h4 class="mb-2">Preventivo y Reactivo</h4>
-                <h3>Soporte Técnico Elite</h3>
+                <h3>Soporte técnico elite</h3>
                 <p class="mt-2">
                   En nosotros encontraras un aliado para solucionar y prevenir
                   incidentes, teniendo una base de técnicos capaces y preparados
