changed dell and huawei size

--- a/infraestructura.html
+++ b/infraestructura.html
@@ -161,7 +161,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <img
                   src="./images/dell-logo.jpg"
                   class="img-fluid dell-bp"
-                  alt="lenovo business partner"
+                  alt="dell logo"
+                  id="dell-logo"
                 />
               </div>
             </div>
@@ -203,6 +204,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                   src="./images/huawei-logo.jpg"
                   class="img-fluid huawei-bp"
                   alt="ibm business partner"
+                  id="huawei-logo"
                 />
               </div>
             </div>
