--- a/impresion.html
+++ b/impresion.html
@@ -160,11 +160,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                   tener contabilizado cuánto gasta tu empresa en la generación
                   de documentos, pudiendo así dirigir los gastos de consumibles
                   y papel a cada una de las áreas. <br /><br />Con las
-                  soluciones de impresión dejaran de generarse documentos
+                  soluciones de impresión dejarán de generarse documentos
                   innecesarios, duplicados, modificados o externos a la empresa.
                   Reduciendo el gasto ambiental al consumir menos papel lo cual
                   se verá reflejado en las finanzas de tu empresa.
-                  <br /><br />Dejaras de preocuparte por capacitación de
+                  <br /><br />Dejarás de preocuparte por capacitación de
                   técnicos y el mantenimiento de los dispositivos, adquirir
                   equipos y su renovación.
                 </p>
@@ -240,11 +240,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                   <i class="fas fa-project-diagram mb-2"></i>
                   <h5 class="card-title text-uppercase my-3">Plan</h5>
                   <p class="card-text">
-                    De implementación de implementación de las soluciones de
-                    impresión con el objetivo de hacer eficientes los procesos
-                    de impresión, copiado, y digitalización de documentos
-                    reduciendo costos en el tiempo, sin sacrificar calidad y
-                    eficiencia.
+                    De implementación de las soluciones de impresión con el
+                    objetivo de hacer eficientes los procesos de impresión,
+                    copiado, y digitalización de documentos reduciendo costos en
+                    el tiempo, sin sacrificar calidad y eficiencia.
                   </p>
                 </div>
               </div>
