--- a/infraestructura.html
+++ b/infraestructura.html
@@ -421,7 +421,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="col-lg-6 advantage-grid-info pt-md-3 mt-3">
               <div class="advantage_left">
                 <!-- <h4 class="mb-2">SAI</h4> -->
-                <h3>Computo Personal</h3>
+                <h3>Cómputo Personal</h3>
                 <hr />
                 <h4>Renovación tecnológica:</h4>
                 <p class="mt-2 pers-computing-p">
@@ -431,9 +431,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                   <br />
                 </p>
                 <p class="mt-2 pers-computing-p">
-                  Con servicios de carga de imagen y envió en toda la república
+                  Con servicios de carga de imagen y envío en toda la república
                   y Centro de servicio Genesys te respalda para optimizar tu
-                  proceso de renovación de computo. También facilitando
+                  proceso de renovación de cómputo. También facilitando
                   propuestas de arrendamiento y financiamiento.
                 </p>
                 <!-- <ul class="ml-3 my-3">
