--- a/comunicaciones.html
+++ b/comunicaciones.html
@@ -153,7 +153,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <h4 class="mb-2">Servicios Administrados de Redes</h4>
                 <h3>Switching y Routing</h3>
                 <ul class="instalaciones-servicios-ul ml-4 mt-2">
-                  <li>Revision de tu Red Física</li>
+                  <li>Revisión de tu Red Física</li>
                   <li>Diseño e Implementación</li>
                   <li>Administración y Monitoreo</li>
                   <li>Soporte y Mantenimiento</li>
