navbar icon background y metadata content keywords

--- a/aix.html
+++ b/aix.html
@@ -55,6 +55,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                   src="./images/Logotipo Genesys Horizontal.png"
                   alt="Logo Genesys Informatica"
                   height="55"
+                  id="genesys-logo"
                 />
               </a>
               <button
