--- a/vmware.html
+++ b/vmware.html
@@ -7,13 +7,12 @@
 <!DOCTYPE html>
 <html lang="zxx">
   <head>
-    <title>Genesys Informatica | VMware</title>
+    <title>Genesys Informática | VMware</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
     <meta
       name="keywords"
-      content="Casita a Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
-Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design"
+      content="Genesys Informática es una consultoría de tecnologías de información, IT, integrador de soluciones, servicios administrados de infraestructura, asesoría de ventas de equipo de computo empresarial en Monterrey, Nuevo Leon"
     />
     <script>
       addEventListener(
@@ -53,8 +52,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               <a href="index.html">
                 <img
                   src="./images/Logotipo Genesys Horizontal.png"
-                  alt="Logo Genesys Informatica"
+                  alt="Logo Genesys Informática"
                   height="55"
+                  id="genesys-logo"
                 />
               </a>
               <button
