--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     <meta charset="utf-8" />
     <meta
       name="keywords"
-      content="Casita a Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
-Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design"
+      content="Genesys Informática es una consultoría de tecnologías de información, IT, integrador de soluciones, servicios administrados de infraestructura, asesoría de ventas de equipo de computo empresarial en Monterrey, Nuevo Leon"
     />
     <script>
       addEventListener(
@@ -70,6 +69,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                   src="./images/Logotipo Genesys Horizontal.png"
                   alt="Logo Genesys Informática"
                   height="55"
+                  id="genesys-logo"
                 />
               </a>
               <button
