added Grainger feedback

--- a/index.html
+++ b/index.html
@@ -375,6 +375,42 @@
                 <div class="clearfix"></div>
               </div>
             </div>
+            <!-- Grainger -->
+            <div class="item">
+              <div class="feedback-info text-left">
+                <div class="feedback-top">
+                  <p>
+                    La razón principal de renovar otros tres años más con ustedes, 
+                    ha sido precisamente porque el modelo de atención que configuraron 
+                    para GRAINGER, ha dado buenos resultados, ya que hemos tenido un mínimo 
+                    de incidentes en tres años y han sido resueltos con prontitud y 
+                    profesionalismo. <br><br>
+                    Es importante mencionar que tenemos una operación que depende en gran 
+                    medida de la impresión y que se puede volver crítica si no se atiende 
+                    rápidamente y debido a la calidad de los equipos y consumibles LEXMARK, 
+                    así como a los servicios de GENESYS, nos sentimos confiados de mantener 
+                    la continuidad de la operación. 
+                    <!-- <br><br> -->
+                    <!-- Gracias por ser parte de este proyecto GRAINGER-GENESYS. -->
+                  </p>
+                </div>
+                <div class="feedback-grids">
+                  <div class="feedback-img-info">
+                    <h5>Isai Mata</h5>
+                    <p>Audit IT & Service Desk Leader, Grainger México</p>
+                  </div>
+                  <div class="feedback-img">
+                    <img
+                      src="images/Grainger.png"
+                      class="img-fluid rounded-circle"
+                      alt="Grainger logo"
+                    />
+                  </div>
+                  <div class="clearfix"></div>
+                </div>
+                <div class="clearfix"></div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
