cloud section added

--- a/cloud.html
+++ b/cloud.html
@@ -8,7 +8,7 @@
 <html lang="zxx">
 
 <head>
-  <title>Genesys Informática | Comunicaciones</title>
+  <title>Genesys Informática | Cloud</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta charset="utf-8" />
   <meta name="keywords"
@@ -32,7 +32,8 @@
   <!-- <link href="css/contact.css" rel='stylesheet' type='text/css' /> -->
   <link rel="stylesheet" href="css/instalaciones.css" />
   <link rel="stylesheet" href="css/comunicaciones.css" />
-  <link href="css/fontawesome-all.css" rel="stylesheet" />
+  <!-- <link href="css/fontawesome-all.css" rel="stylesheet" /> -->
+  <link href="css/all.min.css" rel="stylesheet" />
   <link href="//fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800" rel="stylesheet" />
 </head>
 
@@ -99,21 +100,80 @@
     <!-- //header-top-->
   </section>
   <!-- //mian-content-->
-  <!-- /Contact-->
+
+  <!--/ Nubes -->
   <section class="banner-bottom py-lg-5 py-md-5 py-3" id="services">
     <div class="container">
       <div class="inner-sec py-lg-5 py-3">
-        <h3 class="tittle text-center mb-md-5 mb-4">Comunicaciones</h3>
+        <h3 class="tittle text-center mb-md-5 mb-4">Cloud</h3>
+        <!-- 3 card section -->
+        <div class="row middle-grids pt-lg-5">
+          <div class="col-lg-4 about-in middle-grid-info text-center">
+            <div class="card">
+              <div class="card-body">
+                <i class="fas fa-lock mb-2"></i>
+                <h5 class="card-title text-uppercase my-3">Private</h5>
+                <p class="card-text">
+                  Para satisfacer sus necesidades somos integradores de
+                  sistemas y equipos de marcas reconocidas en el mercado como:
+                  Zigor, Liebert, Notifier, Cisco, APC, SYSTIMAX, Avaya,
+                  Ortronics, Panduit, AMP, entre otros.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 about-in middle-grid-info text-center">
+            <div class="card">
+              <div class="card-body">
+                <i class="fas fa-globe mb-2"></i>
+                <h5 class="card-title text-uppercase my-3">Public</h5>
+                <p class="card-text">
+                  Somos una empresa de servicio que brinda a nuestros clientes
+                  soluciones integrales consistentes en estudios de
+                  factibilidad, asesoría, diseño y construcción de centros de
+                  cómputo y telecomunicaciones. Suministramos bajo la
+                  modalidad "LLAVE EN MANO".
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 about-in middle-grid-info text-center">
+            <div class="card">
+              <div class="card-body">
+                <i class="fas fa-cloud mb-2"></i>
+                <h5 class="card-title text-uppercase my-3">Hybrid</h5>
+                <p class="card-text">
+                  Contamos con 14 recursos técnicos directos en Monterrey
+                  altamente calificados para prestar nuestros servicios desde
+                  la concepción de la solución hasta el mantenimiento
+                  preventivo y correctivo 24 horas.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <hr />
+  <!-- //Nubes-->
+
+  <!-- /Productos-->
+  <section class="banner-bottom py-lg-5 py-md-5 py-3" id="services">
+    <div class="container">
+      <div class="inner-sec py-lg-5 py-3">
+        <h3 class="tittle text-center mb-md-5 mb-4">Servicios Administrados de IT</h3>
         <div class="row middle-grids pt-lg-5">
           <div class="col-lg-6 advantage-grid-info pt-md-5">
             <div class="advantage_left">
-              <h4 class="mb-2">Servicios Administrados de Redes</h4>
-              <h3>Switching y Routing</h3>
+              <h4 class="mb-2">Instancias Windows y Linux</h4>
+              <h3>Computo</h3>
               <ul class="instalaciones-servicios-ul ml-4 mt-2">
-                <li>Revisión de tu Red Física</li>
-                <li>Diseño e Implementación</li>
-                <li>Administración y Monitoreo</li>
-                <li>Soporte y Mantenimiento</li>
+                <li>Batch Services</li>
+                <li>Kubernetes y Contenedores</li>
+                <li>Auto Scaling</li>
+                <li>Serverless Computing</li>
               </ul>
             </div>
           </div>
@@ -135,13 +195,13 @@
           </div>
           <div class="col-lg-6 advantage-grid-info pt-md-5">
             <div class="advantage_left">
-              <h4 class="mb-2">Conexión Privada y Confiable a la Nube</h4>
-              <h3>Cloud Connectivity</h3>
+              <h4 class="mb-2">Seguro y siempre disponible</h4>
+              <h3>Storage</h3>
               <ul class="instalaciones-servicios-ul ml-4 mt-2">
-                <li>Garantizamos tu Ancho de Banda</li>
-                <li>Latencia mejorada a todos los servicios de nube.</li>
-                <li>Servicio único de conectividad entre nubes</li>
-                <li>Enlaces Internacionales</li>
+                <li>Object Storage</li>
+                <li>File System Storage</li>
+                <li>Block Storage</li>
+                <li>Cintas / Backups / Archive</li>
               </ul>
             </div>
           </div>
@@ -149,12 +209,12 @@
         <div class="row middle-grids pt-lg-5">
           <div class="col-lg-6 advantage-grid-info pt-md-5">
             <div class="advantage_left">
-              <h4 class="mb-2">Moderniza tus salas de juntas</h4>
-              <h3>Smart Media</h3>
+              <h4 class="mb-2">Conectividad</h4>
+              <h3>Network</h3>
               <ul class="instalaciones-servicios-ul ml-4 mt-2">
-                <li>Salas de Videoconferencias</li>
-                <li>Soluciones de Audio y Video</li>
-                <li>Comunicación Interna a través de Señalización Digital</li>
+                <li>DNS</li>
+                <li>CDN</li>
+                <li>Load Balancing</li>
               </ul>
             </div>
           </div>
@@ -176,16 +236,11 @@
           </div>
           <div class="col-lg-6 advantage-grid-info pt-md-5">
             <div class="advantage_left">
-              <h4 class="mb-2">Comunicación Unificada a través de</h4>
-              <h3>Microsoft Productivity</h3>
+              <h4 class="mb-2">DB Managed Services</h4>
+              <h3>Bases de Datos</h3>
               <ul class="instalaciones-servicios-ul ml-4 mt-2">
-                <li>Adopción y gestión del cambio para Office 365</li>
-                <li>
-                  Phone System 365 - Colaboración desde cualquier dispositivo
-                  y cualquier plataforma
-                </li>
-                <li>Microsoft Smart Rooms</li>
-                <li>Microsoft Enterprise Productivity</li>
+                <li>Bases de Datos Relacionales</li>
+                <li>Bases de Datos NoSql</li>
               </ul>
             </div>
           </div>
@@ -193,6 +248,65 @@
       </div>
     </div>
   </section>
+
+  <hr>
+  <!-- //Productos -->
+
+  <!--/ Ventajas -->
+  <section class="banner-bottom py-lg-5 py-md-5 py-3" id="services">
+    <div class="container">
+      <div class="inner-sec py-lg-5 py-3">
+        <h3 class="tittle text-center mb-md-5 mb-4">Cloud</h3>
+        <!-- 3 card section -->
+        <div class="row middle-grids pt-lg-5">
+          <div class="col-lg-4 about-in middle-grid-info text-center">
+            <div class="card">
+              <div class="card-body">
+                <i class="fas fa-lock mb-2"></i>
+                <h5 class="card-title text-uppercase my-3">Private</h5>
+                <p class="card-text">
+                  Para satisfacer sus necesidades somos integradores de
+                  sistemas y equipos de marcas reconocidas en el mercado como:
+                  Zigor, Liebert, Notifier, Cisco, APC, SYSTIMAX, Avaya,
+                  Ortronics, Panduit, AMP, entre otros.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 about-in middle-grid-info text-center">
+            <div class="card">
+              <div class="card-body">
+                <i class="fas fa-globe mb-2"></i>
+                <h5 class="card-title text-uppercase my-3">Public</h5>
+                <p class="card-text">
+                  Somos una empresa de servicio que brinda a nuestros clientes
+                  soluciones integrales consistentes en estudios de
+                  factibilidad, asesoría, diseño y construcción de centros de
+                  cómputo y telecomunicaciones. Suministramos bajo la
+                  modalidad "LLAVE EN MANO".
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 about-in middle-grid-info text-center">
+            <div class="card">
+              <div class="card-body">
+                <i class="fas fa-cloud mb-2"></i>
+                <h5 class="card-title text-uppercase my-3">Hybrid</h5>
+                <p class="card-text">
+                  Contamos con 14 recursos técnicos directos en Monterrey
+                  altamente calificados para prestar nuestros servicios desde
+                  la concepción de la solución hasta el mantenimiento
+                  preventivo y correctivo 24 horas.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- //Ventajas -->
 
   <!--/newsletter-->
   <footer class="newsletter_right py-md-5 py-4" id="footer">
